# fastapi

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py  schema.py  utils.py
backend/app/routes/: auth.py  note.py
backend/app/services/: auth.py  note.py
frontend/: next.config.js  package.json
frontend/src/app/: page.js
frontend/src/components/: AddNote.js  Login.js  Notes.js
frontend/src/lib/: utils.js
